@startuml

title __CONTROLLERS's Class Diagram__\n

  namespace usantatecla.mastermind {
    namespace controllers {
      interface usantatecla.mastermind.controllers.AcceptorController {
          {abstract} + accept()
      }
    }
  }
  

  namespace usantatecla.mastermind {
    namespace controllers {
      class usantatecla.mastermind.controllers.ActionController {
          + ActionController()
          + addProposedCombination()
          + getAttempts()
          + getBlacks()
          + getColors()
          + getWhites()
          + isLooser()
          + isWinner()
      }
    }
  }
  

  namespace usantatecla.mastermind {
    namespace controllers {
      class usantatecla.mastermind.controllers.Controller {
          + getWidth()
          ~ Controller()
      }
    }
  }
  

  namespace usantatecla.mastermind {
    namespace controllers {
      interface usantatecla.mastermind.controllers.ControllersVisitor {
          {abstract} + visit()
          {abstract} + visit()
          {abstract} + visit()
      }
    }
  }
  

  namespace usantatecla.mastermind {
    namespace controllers {
      class usantatecla.mastermind.controllers.Logic {
          - controllers : Map<StateValue, AcceptorController>
          + Logic()
          + getController()
      }
    }
  }
  

  namespace usantatecla.mastermind {
    namespace controllers {
      class usantatecla.mastermind.controllers.ProposalController {
          + ProposalController()
          + accept()
          + addProposedCombination()
          + getAttempts()
          + getBlacks()
          + getColors()
          + getWhites()
          + isLooser()
          + isRedoable()
          + isUndoable()
          + isWinner()
          + redo()
          + undo()
      }
    }
  }
  

  namespace usantatecla.mastermind {
    namespace controllers {
      class usantatecla.mastermind.controllers.RedoController {
          + RedoController()
          + isRedoable()
          + redo()
      }
    }
  }
  

  namespace usantatecla.mastermind {
    namespace controllers {
      class usantatecla.mastermind.controllers.ResumeController {
          + ResumeController()
          + accept()
          + resume()
      }
    }
  }
  

  namespace usantatecla.mastermind {
    namespace controllers {
      class usantatecla.mastermind.controllers.StartController {
          + StartController()
          + accept()
          + start()
      }
    }
  }
  

  namespace usantatecla.mastermind {
    namespace controllers {
      class usantatecla.mastermind.controllers.UndoController {
          + UndoController()
          + isUndoable()
          + undo()
      }
    }
  }
  

  usantatecla.mastermind.controllers.ActionController -up-|> usantatecla.mastermind.controllers.Controller
  usantatecla.mastermind.controllers.Controller o-- usantatecla.mastermind.models.Session : session
  usantatecla.mastermind.controllers.Logic o-- usantatecla.mastermind.models.Session : session
  usantatecla.mastermind.controllers.ProposalController .up.|> usantatecla.mastermind.controllers.AcceptorController
  usantatecla.mastermind.controllers.ProposalController -up-|> usantatecla.mastermind.controllers.Controller
  usantatecla.mastermind.controllers.ProposalController o-- usantatecla.mastermind.controllers.ActionController : actionController
  usantatecla.mastermind.controllers.ProposalController o-- usantatecla.mastermind.controllers.RedoController : redoController
  usantatecla.mastermind.controllers.ProposalController o-- usantatecla.mastermind.controllers.UndoController : undoController
  usantatecla.mastermind.controllers.RedoController -up-|> usantatecla.mastermind.controllers.Controller
  usantatecla.mastermind.controllers.ResumeController .up.|> usantatecla.mastermind.controllers.AcceptorController
  usantatecla.mastermind.controllers.ResumeController -up-|> usantatecla.mastermind.controllers.Controller
  usantatecla.mastermind.controllers.StartController .up.|> usantatecla.mastermind.controllers.AcceptorController
  usantatecla.mastermind.controllers.StartController -up-|> usantatecla.mastermind.controllers.Controller
  usantatecla.mastermind.controllers.UndoController -up-|> usantatecla.mastermind.controllers.Controller


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
